# Multi_UAVs_Collaborative_SLAM

./: LICENSE  README.md
0_research_plan/: README.md  SLAM.md  assignment.md  mKey_Points.md  papers.md  research_plan.md  thesis_proposal.docx  thesis_proposal.md
0_research_plan/images/: src=http___img.mp.itc.cn_upload_20160814_d1703ae79d194d28b922a279ff6708ae_th.jpeg&refer=http___img.mp.itc.jfif  src=http___pic1.zhimg.com_v2-acc6f2ebe85c45351df7e735b403b54d_1440w.jpg_source=172ae18b&refer=http___pic1.zhimg.jfif
1_basic/: README.md  bug.md
1_basic/src/: move_wayPoint.cpp  multi_uav_follow.cpp  multi_uav_formation.cpp  takeoff_land.cpp
2_SLAM/: C_tips.md  README.md  SLAM_config.md
2_SLAM/ORB_SLAM2/: CMakeLists.txt  KeyFrameTrajectory.txt  README.md  build.sh
2_SLAM/ORB_SLAM2/include/: KeyFrameDatabase.h  SingleDeviceNode.h  System.h  Tracking.h
2_SLAM/ORB_SLAM2/paper/: ORB_SLAM2.md
2_SLAM/ORB_SLAM2/src/: LoopClosing.cc  SingleDeviceNode.cc  System.cc  (+1 more)
3_Onboard_SLAM/: Mono_ORB_Sim.md  README.md  Stereo_ORB_Sim.md  VINS_Sim.md
3_Onboard_SLAM/XTDrone_Method/: Analysis_run_stereo.md  README.md  px4_sitl.yaml  ros_stereo.cc
3_Onboard_SLAM/ekf/: README.md  bug_for_px4.md  comp_launch.md
3_Onboard_SLAM/gazebo_model/: README.md
3_Onboard_SLAM/uwb_config/: README.md
4_Multi_SLAM/: README.md  stage1.md  stage2.md  stage3.md  stage4.md
4_Multi_SLAM/launch/: README.md  multi_uavs_mavros_sitl_monocular.launch  multi_uavs_mavros_sitl_stereo.launch  single_vehicle_spawn_rcs.launch
4_Multi_SLAM/models/: README.md
5_Experiment/: Onboard_computer.md  README.md
5_Experiment/Euroc/: README.md  ape_mav0.sh  ape_mav1.sh  draw_trajectory_trial.ipynb  test.sh  traj_all.sh  traj_compare0.sh  traj_compare1.sh  traj_groundtruth_all.sh
5_Experiment/sim/: CMakeLists.txt  README.md
6_Map_Merging/: CMakeLists.txt  DesignStep.md  README.md  main.cpp  myVideoORB.md
6_Map_Merging/include/: Data.h  GetKeyBoard.h  ORBMatcher.h
6_Map_Merging/python/: mp4_to_rosbag.ipynb
6_Map_Merging/src/: Data.cc  GetKeyBoard.cc  ORBMatcher.cc  SIFT_extract.cpp  video2rosbag.cc
6_Map_Merging/src/atomic_configure/: .rosinstall  _setup_util.py  local_setup.sh  setup.sh
6_Map_Merging/src/catkin_generated/: generate_cached_setup.py  setup_cached.sh
6_Map_Merging/src/devel/: .catkin
6_Map_Merging/src/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
6_Map_Merging/src/gtest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
6_Map_Merging/src/gtest/googlemock/gtest/: CTestTestfile.cmake  Makefile
7_Paper/: README.md  draft.md  英文文献翻译.docx  论文流程图.pptx
7_Paper/LaTex/: 0-abstract.aux  0-abstract.tex  0-cover.aux  0-cover.tex  1-acknowledgements.aux  1-acknowledgements.tex  1-design-conclusion.aux  1-design-conclusion.tex  Makefile  README.md  ReferenceConfig.md  chapter-01.aux  chapter-01.tex  chapter-02.aux  chapter-02.tex  chapter-03.aux  chapter-03.tex  chapter-04.aux  chapter-04.tex  chapter-05.aux  chapter-05.tex  chapter-06.aux  chapter-06.tex  gbt7714-numerical.bst  logo.tex  main.aux  main.bbl  main.blg  main.pyg  main.tex  main.toc  nwputhesis.bst  nwputhesis.cls  reference.bib
7_Paper/revise/: 修改意见.md
8_backup/: README.md
log/: Frame.md  MapPoint.md  README.md
(+112 files in other folders)
